# software-design-2022

./: .gitignore  README.md
.github/workflows/: build-and-test.yml  ci-cmake_tests.yml
Roguelike/: Program.cs  Roguelike.csproj  Roguelike.sln  Roguelike.sln.DotSettings
Roguelike/Controllers/: BasePlayableController.cs  BattleController.cs  GameController.cs  InventoryEquipmentController.cs  MapController.cs
Roguelike/Core/: Game.cs
Roguelike/Equipments/: SimpleEquipment.cs
Roguelike/Helpers/: IdGenerator.cs  LinqExtensions.cs  ShortcutHandler.cs  TemporaryBoolean.cs
Roguelike/Inventories/: SimpleInventory.cs
Roguelike/Items/: SimpleItem.cs
Roguelike/Map/: Map.cs  (+2 more)
cli-architecture/: README.md
cli-implementation/: CMakeLists.txt  CliHandler.cpp  CliHandler.hpp  Command.hpp  Executor.hpp  Process.hpp  README.md  ReturnCode.h  TokenManager.hpp  cli.cpp  main.cpp
cli-implementation/Auxillary/: CurrentDirectory.hpp  DefaultConfiguration.hpp  Defines.hpp  IStorage.hpp  Storage.hpp  TempFile.hpp
cli-implementation/Auxillary/Storages/: InMemoryStorage.hpp
cli-implementation/Executing/: CommandRegistry.hpp  Execution.hpp  ExecutionBuilder.hpp  ExecutionContext.hpp  ExecutionEdge.hpp  ExecutionException.hpp  Executor.hpp  ICommand.hpp  IManageableProcess.hpp  IProcess.hpp  ReturnCode.h  ReturnCode.hpp  SyncProcess.hpp  SynchronousProcess.hpp
cli-implementation/Interpretation/: CommandRegistry.hpp  ExecutionBuilder.hpp  ICommand.hpp  InterpretationException.hpp  SystemCommand.hpp
cli-implementation/Interpretation/Commands/: AssignCommand.hpp  CatCommand.hpp  EchoCommand.hpp  PwdCommand.hpp  SystemCommand.hpp  WordCountCommand.hpp
cli-implementation/Parsing/: Parser.hpp  ParsingException.hpp  Token.hpp  TokenManager.hpp
cli-implementation/Preprocessing/: CombinedPreprocessor.hpp  IPreprocessor.hpp  PreprocessingException.hpp  Preprocessor.hpp
cli-implementation/Preprocessing/Preprocessors/: AssignmentReorderPreprocessor.hpp  DefaultPreprocessor.hpp  DoubleQuoteMergePreprocessor.hpp  QuoteToTextPreprocessor.hpp  SpaceFilterPreprocessor.hpp  SubstitutionPreprocessor.hpp
cli-implementation/tests/: parser_gtest.cpp  pipeline_gtest.cpp  test_file_1.txt  test_file_2.txt  test_gtest.cpp
(+55 files in other folders)
